Identify enter and exit

--- a/frontEnd/index.html
+++ b/frontEnd/index.html
@@ -25,7 +25,7 @@
         </div>
         <div class="navbar-default">
           <ul class="nav navbar-nav">
-            <li><a href="#!/content/movie"><img src="static/peliculas_btn.png">Control de Acceso</a></li>
+            <li><a href="#!">Control de Acceso</a></li>
           </ul>
         </div>
       </div>
