--- a/frontEnd/index.html
+++ b/frontEnd/index.html
@@ -15,6 +15,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
     <script src="scripts/main.js"></script>
     <script src="controllers/mainController.js"></script>
+    <script src="controllers/reportController.js"></script>
   </head>
   <body>
   <header class="header">
@@ -26,6 +27,7 @@
         <div class="navbar-default">
           <ul class="nav navbar-nav">
             <li><a href="#!">Control de Acceso</a></li>
+            <li><a href="#!/report">Reporte</a></li>
           </ul>
         </div>
       </div>
